[gd_scene load_steps=6 format=3 uid="uid://bgiawodt7wvts"]

[ext_resource type="Theme" uid="uid://df2r57b2stnof" path="res://themes/ui.tres" id="1_1p5cp"]
[ext_resource type="Script" uid="uid://dp4fsgcjkh8hc" path="res://objects/ui/choice_panel/choice_panel.gd" id="2_w0mb8"]
[ext_resource type="PackedScene" uid="uid://c0lxvmfs81ob4" path="res://objects/ui/choice_panel/choice_panel_choice.tscn" id="3_goghf"]

[sub_resource type="Animation" id="Animation_w0mb8"]
resource_name = "choose_left"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_goghf"]
_data = {
&"choose_left": SubResource("Animation_w0mb8")
}

[node name="ChoiceMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1p5cp")
script = ExtResource("2_w0mb8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.298039)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="LabelOr" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -18.5
offset_right = 75.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "OR..."
horizontal_alignment = 1

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_right = 42.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 38
text = "Name"
horizontal_alignment = 1

[node name="ChoiceLeft" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_goghf")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -241.0
offset_bottom = 241.0
grow_vertical = 2

[node name="ChoiceRight" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_goghf")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -241.0
offset_right = 0.0
offset_bottom = 241.0
grow_horizontal = 0
grow_vertical = 2

[node name="ButtonChooseNone" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -85.0
offset_right = 110.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "CHOICE_PANEL_SAFE"

[node name="ChoiceFinalPosition" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceOffscreen" type="Control" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 736.0
offset_bottom = 736.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_goghf")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonChooseNone" to="." method="_on_button_choose_none_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
